feat: Add Swift code management functionality with controller and service integration